# local-councilor-ai-os

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_tests.sh  setup.md
.github/: PULL_REQUEST_TEMPLATE.md
RELEASE_NOTES/: UNRELEASED.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md
bootstrap/: .gitignore  README.md  __init__.py
collaboration/: README.md
data-contracts/: authority_map.example.yaml  context_pack.schema.md  evidence_schema.md  freshness.schema.md  information_classification.schema.md  instance.schema.md  policy-issue.schema.md  policy-pr.schema.md  profile-confirmation.schema.md  provenance.schema.md  run_manifest.schema.md  schema_compatibility.md  source_registry.example.yaml  source_registry.v1.json  vault-map.schema.md
lcaios/: __init__.py  __main__.py  cli.py  database.py  doctor.py  freshness.py  lifecycle.py  module_manifest.py  output_check.py  profile.py  run_manifest.py  smoke_test.py  status.py
modules/: __init__.py
onboarding/: README.md  __init__.py  __main__.py  cli.py  core.py
principles/: charter.md  evidence-and-verification.md  safety-boundary.md
profiles/: council-adapter.md  councilor-profile.yaml
templates/: answer-tracker.md  case-summary.md  evidence-ledger.md  issue-note.md  policy-issue.md  policy-pr.md  public-output-review.md  question-draft.md
way-of-working/: 01-canonical-notes.md  02-moc-and-lifecycle.md  03-data-vs-judgment.md  04-authority-router.md  05-internal-to-public.md  06-evidence-ledger.md  07-verification-gates.md  08-policy-implementation-tracker.md  09-failure-driven-operations.md  README.md  (+2 more)
(+172 files in other folders)
